<resources>
    <string name="app_name">Invoices</string>
    <string name="contact_name">Contact Name</string>
    <string name="number_hash">#</string>
    <string name="line_amount_holder">300</string>

    <string name="account_type">com.salesforce.samples.templateapp.login</string>
    <string name="app_package">com.salesforce.samples.templateapp</string>
    <string name="welcome">Welcome %s</string>
    <string name="logout_button">Logout</string>
    <string name="fetch_contacts_button">Fetch Contacts</string>
    <string name="fetch_accounts_button">Fetch Accounts</string>
    <string name="clear_button">Clear</string>

    <string name="hint_item_name">Item Name</string>
    <string name="hint_item_description">Item Description</string>
    <string name="hint_item_rate">Item Rate</string>
    <string name="err_msg_item_name">Enter Product Name</string>
    <string name="err_msg_item_exists">Product Already Exists</string>
    <string name="err_msg_item_rate">Enter Valid Item Rate</string>
    <string name="save">Save</string>
    <string name="number_zero">0.0</string>

</resources>
