<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circle_image_contact"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            app:src="@drawable/ic_account_grey600_48dp"
            app:civ_border_width="1dp"
            app:civ_border_color="#FF000000" />

        <TextView
            android:id="@+id/text_contact_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/circle_image_contact"
            android:textSize="@dimen/text_headline"
            android:singleLine="false"
            android:text="@string/contact_name" />

        <TextView
            android:id="@+id/text_room_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_contact_name"
            android:layout_toEndOf="@+id/circle_image_contact"
            android:textSize="@dimen/text_title"
            android:singleLine="true"
            android:text="@string/number_hash" />

        <TextView
            android:id="@+id/text_amount_outstanding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:singleLine="true"
            android:textSize="@dimen/text_display1"
            android:text="@string/line_amount_holder" />

    </RelativeLayout>

</LinearLayout>