<?xml version="1.0" encoding="utf-8"?>
<com.feerlaroc.invoices.view.item.ItemDetailView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_top"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="50dp">


    </LinearLayout>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/layout_top"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/input_item_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="name the mutha"
                    android:hint="@string/hint_item_name" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/input_item_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="describe"
                    android:hint="@string/hint_item_description" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_item_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/input_item_rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text="@string/number_zero"
                    android:hint="@string/hint_item_rate" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="name the mutha"
                    android:hint="@string/hint_item_name" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="describe"
                    android:hint="@string/hint_item_description" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text="@string/number_zero"
                    android:hint="@string/hint_item_rate" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="name the mutha"
                    android:hint="@string/hint_item_name" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="describe"
                    android:hint="@string/hint_item_description" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text="@string/number_zero"
                    android:hint="@string/hint_item_rate" />

            </android.support.design.widget.TextInputLayout>

    </LinearLayout>


    </ScrollView>


</com.feerlaroc.invoices.view.item.ItemDetailView>